--- a/red-iron/test.css
+++ b/red-iron/test.css
@@ -11,7 +11,13 @@ html
 
 code
 {
-
+  color: #FAFAFA;
+  background-color: #272822;
+  padding: 2px;
+  border-radius: 4px 4px 4px 4px;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border: 0px solid #000000;
 }
 
 #success
@@ -19,6 +25,7 @@ code
   color: red;
   font-size: 128pt;
   text-align: center;
+  text-shadow: 4px 4px 2px rgba(150, 150, 150, 1);
 }
 
 .container
